force-app/main/default/objects/nFORCE__Group__c/nFORCE__Group__c.object-meta.xml
<CustomObject>
    <description>Generalized grouping object.</description>
    <label>Group</label>
    <nameField>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>