force-app/main/default/objects/nFORCE__Group__c/fields/Description_Custom__c.field-meta.xml
<CustomField>
    <fullName>Description_Custom__c</fullName>
    <description>This is a custom field to describe when and where the Group-UI will be used.</description>
    <inlineHelpText>This is a custom field to describe when and where the Group-UI will be used.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>