force-app/main/default/objects/nFORCE__Group__c/fields/nFORCE__Answer_Context__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Answer_Context__c</fullName>
    <description>Administrators populate this picklist to associate this questionnaire with a record. By default, there is no value.</description>
    <inlineHelpText>Select a record to associate with this questionnaire.</inlineHelpText>
    <label>Answer Context</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Account</fullName>
            </value>
            <value>
                <fullName>Individual Account</fullName>
            </value>
            <value>
                <fullName>Loan</fullName>
            </value>
            <value>
                <fullName>Deposit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>