force-app/main/default/objects/nFORCE__Group__c/fields/nFORCE__App__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__App__c</fullName>
    <description>This field is manually populated. It is required. This field is a unique identifier for the group and is used, in conjunction with a route&apos;s app, to uniquely identify a requested app.</description>
    <inlineHelpText>Enter the group portion of the requested app.

E.g. If the requested app is &apos;loan.change-product&apos;, then the group portion is &apos;loan&apos;.</inlineHelpText>
    <label>App</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>