force-app/main/default/objects/nFORCE__Group__c/fields/nFORCE__Screen__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Screen__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Screen used to render the content of this group. In the nCino UI this Screen will render in the Topbar.</description>
    <inlineHelpText>The Screen used to render the content of this group. In the nCino UI this Screen will render in the Topbar.</inlineHelpText>
    <label>Screen</label>
    <referenceTo>nFORCE__Screen__c</referenceTo>
    <relationshipLabel>Groups</relationshipLabel>
    <relationshipName>Groups</relationshipName>
    <type>Lookup</type>
</CustomField>