force-app/main/default/objects/nFORCE__Group__c/listViews/Master_Groups.listView-meta.xml
<ListView>
    <fullName>Master_Groups</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>MASTER</value>
    </filters>
    <label>Master Groups</label>
</ListView>