force-app/main/default/objects/nFORCE__Group__c/listViews/Portal_Enabled.listView-meta.xml
<ListView>
    <fullName>Portal_Enabled</fullName>
    <columns>NAME</columns>
    <columns>nFORCE__App__c</columns>
    <columns>nFORCE__Category__c</columns>
    <columns>nPortal__Context_Type__c</columns>
    <columns>nPortal__Is_Portal_Enabled__c</columns>
    <columns>nFORCE__Is_Questionnaire__c</columns>
    <columns>nFORCE__Layout__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>nFORCE__lookupKey__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>nPortal__Is_Portal_Enabled__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Portal Enabled</label>
    <language>en_US</language>
</ListView>